# THFgame

./: .gitignore  CMakeLists.txt  Doxyfile  map_editor.py  src.rar
assets/: entity_prefab.json  gui  items.json  list.json  tileset_maker.py
assets/battle_scripts/: test_attack2.lua
assets/dialogs/: test_dialog.txt
assets/entities/: flandre.json  test.json
assets/entities/projectiles/: cross.aseprite  crossProjectile.json  star.aseprite  starProjectile.json
assets/entity_prefabs/: FlandrePlayer.entity  TestAlly.entity  TestBoss.entity  TestPlayer.entity  YumemiBoss.entity
assets/gui/: CircleCollider.txt  EditMap.txt  ICollider.txt  LoadFile.txt  MapEditor.txt  RectangleCollider.txt  Settings.txt
assets/gui/windows/: entity.txt  newEntity.txt  tools.txt  tp.txt  view.txt
assets/maps/: map_0.map  map_1.map  map_2.map  map_256.map  map_256.map.backup  map_3.map
assets/shaders/: basic.frag  basic.vert  simple.frag  simple.vert
assets/spell_cards/bosses/: yumemi_tree.json
assets/spell_cards/test/: test_tree.json
docs/: index.html
docs/html/: BasicSerializeComponent_8cpp.html  BasicSerializeComponent_8cpp_source.html  BasicSerializeComponent_8hpp.html  BasicSerializeComponent_8hpp_source.html  BlockedByTerrainComponent_8cpp.html  BlockedByTerrainComponent_8cpp_source.html  BlockedByTerrainComponent_8hpp.html  BlockedByTerrainComponent_8hpp_source.html  BlockedByTerrainSystem_8cpp.html  BlockedByTerrainSystem_8cpp_source.html  BlockedByTerrainSystem_8hpp.html  BlockedByTerrainSystem_8hpp_source.html  CircleCollider_8cpp.html  CircleCollider_8cpp_source.html  CircleCollider_8hpp.html  CircleCollider_8hpp_source.html  ClassicItem_8cpp.html  ClassicItem_8cpp_source.html  ClassicItem_8hpp.html  ClassicItem_8hpp_source.html  ColliderComponent_8cpp.html  ColliderComponent_8cpp_source.html  ColliderComponent_8hpp.html  ColliderComponent_8hpp_source.html  CollisionComponent_8cpp.html  CollisionComponent_8cpp_source.html  CollisionComponent_8hpp.html  CollisionComponent_8hpp_source.html  CollisionSystem_8cpp.html  CollisionSystem_8cpp_source.html  CollisionSystem_8hpp.html  CollisionSystem_8hpp_source.html  ComponentFactory_8cpp.html  ComponentFactory_8cpp_source.html  ComponentFactory_8hpp.html  ComponentFactory_8hpp_source.html  ComponentGui_8cpp.html  ComponentGui_8cpp_source.html  ComponentGui_8hpp.html  ComponentGui_8hpp_source.html  (+832 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+95 more)
include/: Logger.hpp  Screen.hpp
map_editor/: Map.pde  map_editor.pde  setup.pde
pkgs/: FindAssimp.cmake  FindGlew.cmake  FindGlfw.cmake  FindLua.cmake  FindOpenGL.cmake  FindSFML.cmake  FindTGUI.cmake  Findglm.cmake
src/: Exceptions.hpp  Game.hpp  Input.cpp  Input.hpp  Loader.cpp  Loader.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  MenuMgr.cpp  MenuMgr.hpp  NotCopyable.hpp  Resources.cpp  Resources.hpp  Screen.cpp  Screen.hpp  Utils.cpp  Utils.hpp  main.cpp
src/AIScripts/: allyDodge.cpp  yumemiBoss.cpp
src/AttackScripts/: test_attack.cpp  yumemiAttack.cpp
src/BattleScripts/: test_attack.cpp
src/Core/: CardTree.cpp  CardTree.hpp  Exceptions.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Loader.cpp  Loader.hpp  Logger.hpp  Map.cpp  Map.hpp  MenuMgr.cpp  Resources.hpp  Utils.cpp  Utils.hpp
src/Core/DataType/: Rect.hpp  Vector.hpp
src/Core/Dialogs/: DialogMgr.cpp  DialogMgr.hpp
src/Core/ECS/: Component.cpp  Component.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  System.cpp  System.hpp
src/Core/ExternalCode/: DynamicLibrary.cpp  DynamicLibrary.hpp  ExternalCode.hpp  ExternalModule.hpp  ExternalModuleFactory.cpp  ExternalModuleFactory.hpp  LuaCode.cpp  LuaCode.hpp
src/Core/Input/: AiController.cpp  AiController.hpp  Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  SFMLJoypad.cpp  SFMLJoypad.hpp  SFMLKeyboard.cpp  SFMLKeyboard.hpp
src/Core/Inventory/: ClassicItem.cpp  ClassicItem.hpp  Item.cpp  Item.hpp  ItemFactory.cpp  ItemFactory.hpp
src/Core/Loading/: CardTree.cpp  CardTree.hpp  Loader.cpp  Loader.hpp
src/Core/LuaObjects/: LuaUserData.cpp  LuaUserData.hpp
src/Core/Menus/: Exceptions.hpp  InGameMenu.cpp  InGameMenu.hpp  InventoryMenu.cpp  InventoryMenu.hpp  MainMenu.cpp  MainMenu.hpp  Menu.hpp  MenuMgr.cpp  MenuMgr.hpp
src/Core/Rendering/: Entity.cpp  Entity.hpp  Exceptions.hpp  Hud.cpp  Hud.hpp  Loader.hpp  MeshObject.cpp  MeshObject.hpp  Screen.cpp  Screen.hpp  Viewer.cpp  Viewer.hpp
src/Core/Resources/: Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  Resources.cpp  Resources.hpp
src/Core/Utils/: BaseObject.hpp  GlmUtils.cpp  GlmUtils.hpp  Utils.cpp  Utils.hpp
src/CutscenesScripts/: testCutscene.cpp
src/ECS/: Component.cpp  Component.hpp  Core.cpp  Core.hpp  Entity.cpp  Entity.hpp  Exceptions.hpp  System.cpp  System.hpp
src/ECS/Components/: BasicSerializeComponent.hpp  BlockedByTerrainComponent.cpp  BlockedByTerrainComponent.hpp  ControllableComponent.cpp  ControllableComponent.hpp  DisplayableComponent.cpp  DisplayableComponent.hpp  HealthComponent.cpp  MovableComponent.cpp  MovableComponent.hpp  PlayerHudComponent.cpp  (+3 more)
src/Game/: main.cpp
src/Input/: Keyboard.cpp  Keyboard.hpp
src/Lua/: Exceptions.cpp  Exceptions.hpp  LuaContainer.cpp  LuaContainer.hpp  LuaStack.cpp  LuaStack.hpp  LuaState.cpp  LuaState.hpp
src/MapEditor/: ColliderGui.cpp  ColliderGui.hpp  ComponentGui.cpp  ComponentGui.hpp  GuiUtils.cpp  GuiUtils.hpp  MapEditor.cpp  MapEditor.hpp  main.cpp
src/ProjectileScripts/: testProjectile.cpp  yumemiCross.cpp  yumemiStar.cpp
src/Rendering/: Entity.cpp  Entity.hpp  Exceptions.hpp  Hud.cpp  Hud.hpp  Screen.cpp  Screen.hpp
(+138 files in other folders)
